@@ -8,7 +8,7 @@ import org.springframework.stereotype.Repository;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Repository
 public class FollowRepositoryImpl implements IFollowRepository {
@@ -50,7 +50,27 @@ public class FollowRepositoryImpl implements IFollowRepository {
                 new User(11, "akumar", "Anil", "Kumar", "anil.kumar@example.com", UserType.USER),
                 new User(12, "klee", "Karen", "Lee", "karen.lee@example.com", UserType.SELLER),
                 LocalDate.now()));
+    }
 
+    @Override
+    public Follow saveFollow(User user, User userToFollow) {
+        Follow follow = new Follow((this.followList.size() + 1), user, userToFollow, LocalDate.now());
+        followList.add(follow);
+        return follow;
+    }
+
+    @Override
+    public List<Follow> findAll() {
+        return followList;
+    }
+
+    @Override
+    public Optional<Follow> findFollow(User user, User userToFollow) {
+        return findAll()
+                .stream()
+                .filter(follow -> follow.getFollower().getId().equals(user.getId()))
+                .filter(follow -> follow.getFollowed().getId().equals(userToFollow.getId()))
+                .findFirst();
     }
 
     @Override
@@ -61,10 +81,11 @@ public class FollowRepositoryImpl implements IFollowRepository {
     }
 
     @Override
-    public List<Long> userFollowed(Long userId) {
-        return followList.stream()
-                .filter(f -> f.getFollower().getId().longValue() == userId)
-                .map(f -> f.getFollowed().getId().longValue())
-                .collect(Collectors.toList());
+    public List<Follow> findFollowersByUserId(Integer userId) {
+        return this.followList
+                .stream()
+                .filter(follow -> follow.getFollower().getId().equals(userId))
+                .toList();
     }
+
 }
